Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15048

Pool Quota: ASSERTION( qmt_info(env)->qti_lqes_rstr ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      [  796.043248] LustreError: 9033:0:(qmt_entry.c:990:qti_lqes_restore_fini()) ASSERTION( qmt_info(env)->qti_lqes_rstr ) failed: 
      [  796.046955] LustreError: 9033:0:(qmt_entry.c:990:qti_lqes_restore_fini()) LBUG
      [  796.049569] Pid: 9033, comm: mdt00_000 3.10.0-957.1.3957.1.3.x3.6.171.x86_64 #1 SMP Fri Nov 13 07:22:53 PST 2020
      [  796.052995] Call Trace:
      [  796.054659] [<0>] libcfs_call_trace+0x8e/0xf0 [libcfs]
      [  796.056936] [<0>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [  796.059259] [<0>] qti_lqes_restore_fini+0x3ff/0x400 [lquota]
      [  796.061686] [<0>] qmt_set_with_lqe+0x2d7/0xb70 [lquota]
      [  796.064062] [<0>] qmt_set.constprop.14+0xc3/0x3b0 [lquota]
      [  796.066479] [<0>] qmt_quotactl+0x4fe/0x620 [lquota]
      [  796.068734] [<0>] mdt_quotactl+0x6a7/0x7f0 [mdt]
      [  796.071015] [<0>] tgt_request_handle+0x96a/0x1680 [ptlrpc]
      [  796.073354] [<0>] ptlrpc_server_handle_request+0x256/0xae0 [ptlrpc]
      [  796.075940] [<0>] ptlrpc_main+0xb7c/0x14d0 [ptlrpc]
      [  796.078099] [<0>] kthread+0xd1/0xe0
      [  796.079957] [<0>] ret_from_fork_nospec_begin+0x21/0x21
      [  796.082112] [<0>] 0xfffffffffffffffe
      [  796.083883] Kernel panic - not syncing: LBUG
      

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: